# StockMind

./: .gitignore  CHANGELOG_TASK.MD  CONTRIBUTING.md  Cargo.toml  README.md  findings.md  progress.md  task_plan.md
.trae/: CHANGELOG_TASK.md
docs/: AI_HANDOFF.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
scripts/: README.md  build_nikkei_replay_samples.py  invoke_isolated_cargo.ps1  run_nikkei_hgb_rf_daily_workflow.py  run_nikkei_real_failure_event_balance.py  run_nikkei_simulated_action_balance.py  test_nikkei_continuation_head.py  test_nikkei_real_failure_event_balance.py  test_nikkei_replay_classifier.py  test_nikkei_simulated_action_balance.py  test_run_nikkei_hgb_rf_daily_workflow.py  train_nikkei_continuation_head.py  train_nikkei_replay_classifier.py
src/: lib.rs  main.rs  runtime_paths.rs  test_support.rs
tests/: security_account_objective_contract_cli.rs  security_account_open_position_snapshot_cli.rs  security_analysis_contextual_cli.rs  security_analysis_fullstack_cli.rs  security_capital_rebase_cli.rs  security_chair_resolution_builder_unit.rs  security_chair_resolution_cli.rs  security_committee_vote_cli.rs  security_composite_committee_payload_adapter_unit.rs  security_composite_scorecard_unit.rs  security_condition_review_cli.rs  security_decision_committee_cli.rs  security_decision_committee_legacy_freeze_source_guard.rs  security_decision_evidence_bundle_cli.rs  security_decision_package_chair_node_source_guard.rs  security_decision_package_cli.rs  security_decision_package_revision_cli.rs  security_decision_submit_approval_cli.rs  (+86 more)
(+839 files in other folders)
