[package]
name = "stockmind"
version = "0.1.0"
edition = "2024"

[lib]
name = "excel_skill"
path = "src/lib.rs"

[[bin]]
name = "excel_skill"
path = "src/main.rs"

[dependencies]
encoding_rs = "0.8"
calamine = "0.31"
chrono = "0.4"
polars = { version = "0.51", default-features = false, features = ["dtype-date", "dtype-datetime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
hmac = "0.12"
regex = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
rust_xlsxwriter = "0.89"
ureq = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
zip = "2"
